--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,5 +1,5 @@
 .home {
-  display: flex;
+  /* display: flex; */
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
@@ -18,4 +18,10 @@
   z-index: -1;
   margin-bottom: -150px;
   mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+}
+
+@media (max-width: 980px) {
+  .home__image {
+    margin-bottom: 0;
+  }
 }
