--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,3 +1,6 @@
+body * {
+  transition: 0.3s;
+}
 .product {
   display: flex;
   flex-direction: column;
@@ -42,4 +45,12 @@
   width: 100%;
   height: 100px;
   margin-bottom: 15px;
+}
+
+.product:hover {
+  transition: transform 0.3s ease;
+}
+
+.product:hover {
+  transform: scale(1.05);
 }
